# Apollo-g-streamer

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  buildForDockerDeployment.sh
include/: ApolloCommunicator.h  SpScQueue.h
include/Stream/: Pipeline.h  Processor.h
src/: ApolloCommunicator.cpp  ApolloCommunicator.h  GstProcessor.cpp  GstProcessor.h  SpScQueue.h  main.cpp
src/Stream/: Pipeline.cpp  Processor.cpp
